test/classes/deitz/test_union4.good
x: (-1)
test_union4.chpl:16: error: halt reached - illegal union access
